update: docs update
