# internal/services/http-server/http-server.go
@@ -89,7 +89,7 @@ func (s *HTTPServer) SetupRoutes() http.Handler {
 // handleLogin
 // @Summary      Аутентификация
 // @Description  Аутентификация, возвращает jwt токен, который прикладывается ко всем (secure) рутам.
-// @Tags         auth
+// @Tags         Авторизация\Регистрация
 // @Accept       json
 // @Produce      json
 // @Param        loginRequest  body  models.LoginRequest true  "Login data"
@@ -128,7 +128,7 @@ func (s *HTTPServer) handleLogin(w http.ResponseWriter, r *http.Request) {
 // handleRegister
 // @Summary      Регистрация
 // @Description  Регистрация - будет только в админке
-// @Tags         auth
+// @Tags         Авторизация\Регистрация
 // @Accept       json
 // @Produce      json
 // @Param        registerRequest  body  models.RegisterRequest true "Register data"
@@ -172,7 +172,7 @@ func (s *HTTPServer) handleRegister(w http.ResponseWriter, r *http.Request) {
 // @Summary      Категории идей(secure)
 // @Description  Ручка категорий идей, в теории дергается один раз при первой загрузке страницы,
 // так как никогда не обновляется
-// @Tags         ideas
+// @Tags         Идеи
 // @Produce      json
 // @Success      200  {array}   models.IdeaCategory
 // @Failure      405  {string}  string  "Invalid method"
@@ -193,7 +193,7 @@ func (s *HTTPServer) handleGetIdeaCategories(w http.ResponseWriter, r *http.Requ
 // @Summary      Статусы идей(secure)
 // @Description  Ручка статусов идей, в теории дергается один раз при первой загрузке страницы,
 // // так как никогда не обновляется
-// @Tags         ideas
+// @Tags         Идеи
 // @Produce      json
 // @Success      200  {array}   models.IdeaStatus
 // @Failure      405  {string}  string  "Invalid method"
@@ -213,7 +213,7 @@ func (s *HTTPServer) handleGetIdeaStatuses(w http.ResponseWriter, r *http.Reques
 // handleGetAllIdeas
 // @Summary      Все идеи(secure)
 // @Description  Возвращает все идеи списков без комментариев\ответов.
-// @Tags         ideas
+// @Tags         Идеи
 // @Produce      json
 // @Success      200  {array}   models.Idea
 // @Failure      500  {string}  string  "Failed to get ideas"
@@ -234,7 +234,7 @@ func (s *HTTPServer) handleGetAllIdeas(w http.ResponseWriter, r *http.Request) {
 // handleGetIdeaByUID
 // @Summary      Конкретная идея(secure)
 // @Description  Возвращает идею по UID, уже с комментариями\ответами
-// @Tags         ideas
+// @Tags         Идеи
 // @Produce      json
 // @Param        uid   path      string  true  "Idea UID"
 // @Success      200   {object}  models.IdeaComment
@@ -263,7 +263,7 @@ func (s *HTTPServer) handleGetIdeaByUID(w http.ResponseWriter, r *http.Request) 
 // handleInsertIdea
 // @Summary      Вставка новой идеи(secure)
 // @Description  Вставляет идею, и возвращает ее со всеми заполненными полями
-// @Tags         ideas
+// @Tags         Идеи
 // @Accept       json
 // @Produce      json
 // @Param        idea  body  models.InsertIdeaRequest true  "Idea data"
@@ -297,7 +297,7 @@ func (s *HTTPServer) handleInsertIdea(w http.ResponseWriter, r *http.Request) {
 // handleInsertComment
 // @Summary      Вставка комментария(secure)
 // @Description  Вставляет коммент и возвращает его.
-// @Tags         comments
+// @Tags         Вставка комментариев\ответов
 // @Accept       json
 // @Produce      json
 // @Param        comment body models.InsertCommentRequest true "Comment data"
@@ -335,7 +335,7 @@ func (s *HTTPServer) handleInsertComment(w http.ResponseWriter, r *http.Request)
 // handleInsertReply
 // @Summary      Вставка ответа
 // @Description  Вставляет новый ответ, и возвращает его
-// @Tags         replies
+// @Tags         Вставка комментариев\ответов
 // @Accept       json
 // @Produce      json
 // @Param        reply  body  models.InsertReplyRequest true "Reply data"
@@ -372,7 +372,7 @@ func (s *HTTPServer) handleInsertReply(w http.ResponseWriter, r *http.Request) {
 // handleGetUser
 // @Summary      Получение юзера по UID
 // @Description  Возвращает данные пользователя по UID.
-// @Tags         users
+// @Tags         Пользователи
 // @Produce      json
 // @Param        uid   path      string  true  "User UID"
 // @Success      200   {object}  models.User
@@ -400,7 +400,7 @@ func (s *HTTPServer) handleGetUser(w http.ResponseWriter, r *http.Request) {
 // handleUploadUserPFP
 // @Summary      Загрузка PFP
 // @Description  Загрузка новой аватарки для юзера.
-// @Tags         users
+// @Tags         Пользователи
 // @Accept       multipart/form-data
 // @Produce      json
 // @Param        profile_picture  formData  file  true  "Profile picture file"
